Update index.html - CS200

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <!-- Text -->
       <h1>Hi, I'm Carl Barks!</h1>
       <p>
-        I am a Ph.D. student in empirical barkology at Woof University.
+        I am a BTech student in empirical barkology at IIT Bhilai.
       </p>
       <p>
         Most of my current research is driven by trying to find an answer to the age-old question of “Who is a good boy?"
