--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
       <img src="image.jpg" alt="Carl Barks" class="avatar" />
 
       <!-- Text -->
-      <h1>Hi, I'm Carl Barks!</h1>
+      <h1>Hi, I'm SeeAss TwoHundred</h1>
       <p>
-        I am a BTech student in empirical barkology at IIT Bhilai.
+        I am a BTech student in STeeTee Lab at IIT Bhilai.
       </p>
       <p>
         Most of my current research is driven by trying to find an answer to the age-old question of “Who is a good boy?"
