--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
       <img src="image.jpg" alt="Carl Barks" class="avatar" />
 
       <!-- Text -->
-      <h1>Hi, I'm SeeAss TwoHundred</h1>
+      <h1>Hi, I'm SeeAss TooHunDread</h1>
       <p>
         I am a BTech student in STeeTee Lab at IIT Bhilai.
       </p>
       <p>
-        Most of my current research is driven by trying to find an answer to the age-old question of “Who is a good boy?"
+        Most of my current research is driven by trying to find an answer to the age-old question of “How to pass CS200?"
       </p>
       <p>
         Please feel free to get in touch!
